--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -7,7 +7,7 @@
     <span class="title-group">
         <a>
             <i class="material-icons">
-                dashboard
+                home
             </i>
             Aplicação CRUD
         </a>
