--- a/frontend/src/app/components/product/product-read2/product-read2.component.html
+++ b/frontend/src/app/components/product/product-read2/product-read2.component.html
@@ -1,5 +1,9 @@
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
+    <!-- Exemplo com paginacao, nao esta sendo usado neste projeto -->
+    <!-- Estudar sobre paginacao https://github.com/typicode/json-server#paginate -->
+    <!-- É importante que a paginacao já ocorra no Backend e depois seja implementada tambem aqui no Frontend -->
+ 
     <!-- Id Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Código</th>
@@ -14,7 +18,7 @@
 
 
      <!-- Price Column -->
-     <ng-container matColumnDef="Preço unitário">
+     <ng-container matColumnDef="Preço">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Preço</th>
       <td mat-cell *matCellDef="let row">{{row.price}}</td>
     </ng-container>
