--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-title>Novo Produto</mat-card-title>
-    <form action="">
+    <form>
         <mat-form-field>
             <input matInput placeholder="Nome" [(ngModel)]="product.name" name="name">
         </mat-form-field>
